updated content on about me and projects

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Carlos Alvarez</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
+          rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -45,25 +45,29 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
-        </ul>
-        <ul class="navbar-nav sm-icons">
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-github-square"></i></a></li>
+            <ul class="navbar-nav sm-icons">
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><i class="fa-brands fa-github-square"></i></a></li>
+            </ul>
         </ul>
     </div>
 </nav>
-<body class="$font-family-sans-serif:">
+<body class="$font-family-sans-serif:Roboto">
 
 <section>
-    <div class="row centered text-white">
-        <div class="col-9">
-        <h1>Carlos Alvarez</h1>
-        <h4> Web Development/Creative/Blockchain</h4>
+    <div class="container-fluid">
+        <div class="row centered text-white">
+            <div class="col">
+                <div class="text-right stroke">
+                <h1>Carlos Alvarez</h1>
+                <h4> Web Development/Creative/Blockchain</h4>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="bg-light">
-        <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
-             class="p-3 mb-2 bg-gradient-info text-white img-fluid max-width: 100%; and height: auto">
+        <div class="bg-light">
+            <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
+                 class="p-3 mb-2 bg-gradient-info text-white img-responsive max-width: 100%; and height: auto">
+        </div>
     </div>
 </section>
 
@@ -71,20 +75,18 @@
 <!--
 About Me Section
 -->
-<h1>About Carlos</h1>
-<div class="clearfix bg-light mt-5 max-width: 100%">
+<div class="container clearfix bg-light mt-5 max-width: 100%">
+    <h1 class="p-3 ml-5 mt-3">About Carlos</h1>
     <div class="row">
         <div class="col">
             <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block float-md-end p-5" alt="good boi">
         </div>
-        <div class="col-6 mt-4">
-            <p>such lorem, i can haz layout! want layout, oh my lorem. go swag, very elit, want ipsum! much doge, go
-                swag, go swag, i can haz layout! many design. rate me, much full, many design. wow, want layout, need
-                design! i iz cute?! very elit, want layout, such word. oh my lorem. so lorem! i iz cute?! wow, oh my
-                mattis. wow! much word, wow, much amet. wow, plz text, wow. i iz cute?! so lorem! many adipiscing, very
-                text. wow. such doge, such doge, so ipsum, wow, much amet. plz swag, rate me! much amet. such lorem,
-                many adipiscing, go swag,
+        <div class="col-6 mt-5">
+            <p>Carlos Alvarez is a business development professional with experience working with large corporate giants
+                as well as extensive experience operating and managing a growing small business. His interests in
+                technology have spanned back to the 56k modem and his commitment to learning is unmatched by his peers.
             </p>
+
         </div>
     </div>
 </div>
@@ -93,36 +95,29 @@ About Me Section
 <!--
 Projects-->
 
-<div class="container-fluid mx-5 mt-5">
+<div class="container-fluid mx-5 mt-5 bg-info">
     <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
         <div class="col-sm-4 text-center">
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
-                 class="img-fluid d-block rounded-circle" alt="rare paleta pal">
+            <h3>Business Development</h3>
+            <img src="documentation/img/money.png" class="d-block rounded-circle" width="200" height="200" alt="Money man">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> need full. such lorem! want aenean! go word! yes master doge. much lorem. so layout, much word, very
-                    doge! want adipiscing! plz sit. so elit, want adipiscing! such text, many lorem. wow. wow, want
-                    adipiscing! many design, need full. very swag! such lorem! very mattis, oh my doge. wow. wow. wow,
-                    much lorem. many design, yes master doge! </p>
+                <p> Carlos Has extensive experience in business development working directly with Fortune 100 companies.  His most recent experience has led him to operating a successful local business that has grown to 30 people with over 1 million in annual sales.  He knows how to implement successful business strategies and data analysis to increase sales and grow your business.  </p>
             </div>
         </div>
         <div class="col-sm-4 text-center rounded-circle">
+            <h3>Web Development</h3>
             <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
                  class="img-fluid d-block rounded" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> such doge, oh my swag. oh my doge. go word! want aenean! oh my ipsum! need full. wow, go word! wow.
-                    much full, many design, oh my swag. such lorem! oh my swag. wow. such lorem! go ipsum. plz design!
-                    such doge, wow. go ipsum. oh my swag. very swag! plz sit. very amet, many design, i iz cute?! such
-                    swag! much text. </p>
+                <p> The internet is not just a passing fad and it's safe to say it is here to stay.  Connect with me to see how I can help you with your technology based solutions to include web and mobile site development, Salesforce implementations and more. </p>
             </div>
         </div>
         <div class="col-sm-4 text-center">
+            <h3>Web 3 Development</h3>
             <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
                  class="img-fluid d-block rounded-circle" alt="rare paleta pal">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
-                <p> want adipiscing! need full. need layout. need layout. oh my ipsum! need layout. so elit, wow. many
-                    design, many design! very amet, wow, plz consectetur, rate me, very mattis, much text. go word! very
-                    swag! txt me! much text. i can haz layout. yes master doge! such swag! much text. oh my doge. very
-                    mattis, plz design! many design, very amet, i iz cute?, </p>
+                <p> Web 1.0 introduced the internet.  Web 2.0 introduced social media and Web 3 is about to revolutionize how we consume content and how we physically live.  With large companies already jumping into blockchain and NFT technologies the future is bright for Web 3 developers.  We specialize in blockchain technologies and Solidity development as well as creating Non-fungible tokens for business with massive utility. </p>
             </div>
         </div>
     </div>
@@ -142,10 +137,10 @@ Projects-->
             <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="" required>
         </div>
         <div class="col-md-4 mb-3">
-            <label for="validationDefaultUsername">Username</label>
+            <label for="validationDefaultUsername">Email</label>
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                    <span class="input-group-text" id="inputGroupPrepend2"><i class="fa-solid fa-envelope"></i></span>
                 </div>
                 <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username"
                        aria-describedby="inputGroupPrepend2" required>
