updated font awesome

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,10 +6,9 @@
     <title>Carlos Alvarez</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
-          rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="style1.css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <header>
     <nav id="scrollID" class="navbar navbar-light bg-light sticky-top">
@@ -26,7 +25,7 @@
                 <a class="nav-link" href="#About">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="dropdown" href="#Projects">Projects</a>
+                <a class="nav-link" href="#Projects">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#Contact">Contact</a>
@@ -65,6 +64,7 @@ About Me Section
             <img src="documentation/img/Squinty%20Carlos.jpg" class="img-responsive d-block float-md-end p-5" alt="good boi">
         </div>
         <div class="col-6 mt-5">
+            <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
             <p>Carlos Alvarez is a business development professional with experience working with large corporate giants
                 as well as extensive experience operating and managing a growing small business. His interests in
                 technology have spanned back to the 56k modem and his commitment to learning is unmatched by his peers.
@@ -79,7 +79,7 @@ Projects-->
 <div class="container-fluid mx-5 mt-5 bg-info" id="Projects">
     <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
         <div class="col-sm-4 text-center">
-            <h3 id="projects">Business Development</h3>
+            <h3>Business Development</h3>
             <img src="documentation/img/money.png" class="d-block rounded-circle ml-5" width="200" height="200"
                  alt="Money man">
             <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
@@ -173,8 +173,8 @@ Projects-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script type="module" src="script.js"></script>
-<script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
+<script src="script.js"></script>
+
 
 </body>
 </html>
