--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style1.css">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css"
+          rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <header>
     <nav id="scrollID" class="navbar navbar-light bg-light sticky-top">
-        <img src="documentation/img/Carlos%20Alvarez%20Sigil%20(navbar%20logo).png">
-        <a class="navbar-brand" href="#">Carlos Alvarez</a>
+        <a class="navbar-brand" href="#">
+            <img src="documentation/img/Carlos%20Alvarez%20Sigil%20(navbar%20logo).png" class="d-inline-block align-center" alt="Carlos Alvarez logo">
+            Carlos Alvarez
+        </a>
         <ul class="navbar-nav sm-icons">
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-instagram"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-pinterest-p"></i></a></li>
@@ -28,151 +33,160 @@
                 <a class="nav-link" href="#Projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#Contact">Contact</a>
+                <a class="nav-link" href="#contactForm">Contact</a>
             </li>
         </ul>
     </nav>
 </header>
 <div data-spy="scroll" data-target="#scrollID" data-offset="0">
-<body class="$font-family-sans-serif:Roboto">
+    <body class="$font-family-sans-serif:Roboto">
 
-<section>
-    <div class="container-fluid">
-        <div class="row centered text-white">
+    <section>
+        <div class="container-fluid">
+            <div class="row centered text-white">
+                <div class="col">
+                    <div class="text-right stroke">
+                        <h1>Carlos Alvarez</h1>
+                        <h4> Web Development/Creative/Blockchain</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light">
+                <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
+                     class="p-3 mb-2 bg-gradient-info text-white img-responsive max-width: 100%; and height: auto">
+            </div>
+        </div>
+    </section>
+
+
+    <!--
+    About Me Section
+    -->
+    <div class="container clearfix bg-light mt-5 max-width: 100%">
+        <h1 class="p-3 ml-5 mt-3" id="About">About Carlos</h1>
+        <div class="row">
             <div class="col">
-                <div class="text-right stroke">
-                    <h1>Carlos Alvarez</h1>
-                    <h4> Web Development/Creative/Blockchain</h4>
+                <img src="documentation/img/Squinty%20Carlos.jpg" class="img-responsive d-block float-md-end p-5"
+                     alt="good boi">
+            </div>
+            <div class="col-6 mt-5">
+                <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+                <p>Carlos Alvarez is a business development professional with experience working with large corporate
+                    giants
+                    as well as extensive experience operating and managing a growing small business. His interests in
+                    technology have spanned back to the 56k modem and his commitment to learning is unmatched by his
+                    peers.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!--
+    Projects-->
+
+    <div class="container-fluid mx-5 mt-5 bg-info" id="Projects">
+        <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
+            <div class="col-sm-4 text-center">
+                <h3>Business Development</h3>
+                <img src="documentation/img/money.png" class="d-block rounded-circle ml-5" width="200" height="200"
+                     alt="Money man">
+                <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
+                    <p> Carlos Has extensive experience in business development working directly with Fortune 100
+                        companies.
+                        His most recent experience has led him to operating a successful local business that has grown
+                        to 30
+                        people with over 1 million in annual sales. He knows how to implement successful business
+                        strategies
+                        and data analysis to increase sales and grow your business. </p>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center rounded-circle">
+                <h3>Web Development</h3>
+                <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
+                     class="img-fluid d-block rounded" alt="rare paleta pal" width="200" height="200">
+                <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
+                    <p> The internet is not just a passing fad and it's safe to say it is here to stay. Connect with me
+                        to
+                        see how I can help you with your technology based solutions to include web and mobile site
+                        development, Salesforce implementations and more. </p>
+                </div>
+            </div>
+            <div class="col-sm-4 text-center">
+                <h3>Web 3 Development</h3>
+                <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
+                     class="img-fluid d-block rounded-circle" alt="rare paleta pal">
+                <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
+                    <p> Web 1.0 introduced the internet. Web 2.0 introduced social media and Web 3 is about to
+                        revolutionize
+                        how we consume content and how we physically live. With large companies already jumping into
+                        blockchain and NFT technologies the future is bright for Web 3 developers. We specialize in
+                        blockchain technologies and Solidity development as well as creating Non-fungible tokens for
+                        business with massive utility. </p>
                 </div>
             </div>
         </div>
-        <div class="bg-light">
-            <img src="documentation/img/Carlos%20Fall%202021.2.jpg" alt="Carlos Alvarez"
-                 class="p-3 mb-2 bg-gradient-info text-white img-responsive max-width: 100%; and height: auto">
-        </div>
     </div>
-</section>
 
 
+    <!--//Contact Form//-->
+    <h2 class="ml-5" id="contactForm"> Contact Me</h2>
+
+    <form action="./apis/" class="m-5 p-3" id="contact" method="post" novalidate>
+        <div class="form-row">
+            <div class="col-md-4 mb-3">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" id="firstName" placeholder="First name" value=""
+                       required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="validationDefault02">Last name</label>
+                <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value=""
+                       required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="email">Email</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupPrepend2"><i
+                                class="fa-solid fa-envelope"></i></span>
+                    </div>
+                    <input type="text" class="form-control" id="email" placeholder="Email Address"
+                           aria-describedby="inputGroupPrepend2" required>
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-6 mb-3">
+                <label for="message">message</label>
+                <input type="text" class="form-control" id="message" placeholder="add your message" required>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Submit form</button>
+        <button class="btn btn-primary" type="reset">Reset</button>
+    </form>
 <!--
-About Me Section
+    End Contact form
 -->
-<div class="container clearfix bg-light mt-5 max-width: 100%">
-    <h1 class="p-3 ml-5 mt-3" id="About">About Carlos</h1>
-    <div class="row">
-        <div class="col">
-            <img src="documentation/img/Squinty%20Carlos.jpg" class="img-responsive d-block float-md-end p-5" alt="good boi">
-        </div>
-        <div class="col-6 mt-5">
-            <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-            <p>Carlos Alvarez is a business development professional with experience working with large corporate giants
-                as well as extensive experience operating and managing a growing small business. His interests in
-                technology have spanned back to the 56k modem and his commitment to learning is unmatched by his peers.
-            </p>
-        </div>
-    </div>
-</div>
-
-<!--
-Projects-->
-
-<div class="container-fluid mx-5 mt-5 bg-info" id="Projects">
-    <div class="row align-items-start mr-5 gx-5 mb-5 gy-5">
-        <div class="col-sm-4 text-center">
-            <h3>Business Development</h3>
-            <img src="documentation/img/money.png" class="d-block rounded-circle ml-5" width="200" height="200"
-                 alt="Money man">
-            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> Carlos Has extensive experience in business development working directly with Fortune 100 companies.
-                    His most recent experience has led him to operating a successful local business that has grown to 30
-                    people with over 1 million in annual sales. He knows how to implement successful business strategies
-                    and data analysis to increase sales and grow your business. </p>
-            </div>
-        </div>
-        <div class="col-sm-4 text-center rounded-circle">
-            <h3>Web Development</h3>
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
-                 class="img-fluid d-block rounded" alt="rare paleta pal" width="200" height="200">
-            <div class="border p-2 bg-light rounded mt-4 d-inline-flex justify-content-center" style="width: 250px">
-                <p> The internet is not just a passing fad and it's safe to say it is here to stay. Connect with me to
-                    see how I can help you with your technology based solutions to include web and mobile site
-                    development, Salesforce implementations and more. </p>
-            </div>
-        </div>
-        <div class="col-sm-4 text-center">
-            <h3>Web 3 Development</h3>
-            <img src="documentation/img/Paleta%20pal%20social%20club%20(super%20rare).png"
-                 class="img-fluid d-block rounded-circle" alt="rare paleta pal">
-            <div class="border p-2 bg-light rounded mt-4 d-inline-flex" style="width: 250px">
-                <p> Web 1.0 introduced the internet. Web 2.0 introduced social media and Web 3 is about to revolutionize
-                    how we consume content and how we physically live. With large companies already jumping into
-                    blockchain and NFT technologies the future is bright for Web 3 developers. We specialize in
-                    blockchain technologies and Solidity development as well as creating Non-fungible tokens for
-                    business with massive utility. </p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<!--//Contact Form//-->
-
-<form class="m-5 p-3" id="Contact">
-    <div class="form-row">
-        <div class="col-md-4 mb-3">
-            <label for="validationDefault01">First name</label>
-            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="" required>
-        </div>
-        <div class="col-md-4 mb-3">
-            <label for="validationDefault02">Last name</label>
-            <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="" required>
-        </div>
-        <div class="col-md-4 mb-3">
-            <label for="validationDefaultUsername">Email</label>
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupPrepend2"><i class="fa-solid fa-envelope"></i></span>
-                </div>
-                <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username"
-                       aria-describedby="inputGroupPrepend2" required>
-            </div>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="col-md-6 mb-3">
-            <label for="validationDefault03">City</label>
-            <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
-        </div>
-        <div class="col-md-3 mb-3">
-            <label for="validationDefault04">State</label>
-            <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
-        </div>
-        <div class="col-md-3 mb-3">
-            <label for="validationDefault05">Zip</label>
-            <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-            <label class="form-check-label" for="invalidCheck2">
-                Agree to terms and conditions
-            </label>
-        </div>
-    </div>
-    <button class="btn btn-primary" type="submit">Submit form</button>
-</form>
+    <div id="output-area"></div>
 
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js" integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/additional-methods.min.js" integrity="sha512-XZEy8UQ9rngkxQVugAdOuBRDmJ5N4vCuNXCh8KlniZgDKTvf7zl75QBtaVG1lEhMFe2a2DuA22nZYY+qsI2/xA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+<!-- Google Recaptcha__>
+
+<-- custom jquery script-->
+
 <script src="script.js"></script>
 
 
