added src and index.js with backend dependancies

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -58,25 +58,23 @@
         </div>
     </section>
 
-
     <!--
     About Me Section
     -->
-    <div class="container clearfix bg-light mt-5 max-width: 100%">
-        <h1 class="p-3 ml-5 mt-3" id="About">About Carlos</h1>
+    <div class="container">
         <div class="row">
-            <div class="col">
-                <img src="documentation/img/Squinty%20Carlos.jpg" class="img-responsive d-block float-md-end p-5"
-                     alt="good boi">
-            </div>
-            <div class="col-6 mt-5">
-                <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-                <p>Carlos Alvarez is a business development professional with experience working with large corporate
-                    giants
-                    as well as extensive experience operating and managing a growing small business. His interests in
-                    technology have spanned back to the 56k modem and his commitment to learning is unmatched by his
-                    peers.
-                </p>
+            <div class="clearfix bg-light mt-5 max-width: 100%" id="About">
+                <h2 class="ml-5">About Carlos</h2>
+                <img src="documentation/img/Squinty%20Carlos.jpg" class="img-fluid d-block col-md-6 float-md-start mb-3 ms-md-3 p-5" alt="good boi">
+                <div class="mx-4 p-5">
+                    <p>Carlos Alvarez is a business development professional with experience working with large corporate
+                        giants
+                        as well as extensive experience operating and managing a growing small business. His interests in
+                        technology have spanned back to the 56k modem and his commitment to learning is unmatched by his
+                        peers.
+
+                    </p>
+                </div>
             </div>
         </div>
     </div>
